--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "jest --watchAll"
   },
   "keywords": [],
-  "author": "",
+  "author": "Rachael",
   "license": "MIT",
   "dependencies": {
     "jest": "^24.1.0"
